add retrieve a single product endpoint, update exception handler